--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
 }
-li {
+ul{
   list-style-type: none;
 }
 a {
@@ -11,7 +11,9 @@ a {
   color: white;
 }
 body {
-  font-size: 18px;
+  width: 100%;
+  font:16px play;
+  color: #666;
   background-image: url('../image/1.png');
 }
 .header {
@@ -19,4 +21,10 @@ body {
   height: 100px;
   background-color: white;
   box-shadow: 0 -24px 25px 19px black;
+}
+.sidebar-content{
+  border-radius: 10px;
+  margin-top: 30px;
+  padding: 20px;
+  background-color: #fff;
 }
