--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -8,7 +8,7 @@ ul{
 a {
   display: inline-block;
   text-decoration:none;
-  color: white;
+  color: rgb(255, 255, 255);
 }
 body {
   width: 100%;
@@ -18,7 +18,6 @@ body {
 }
 .header {
   width: 1920px;
-  height: 100px;
   background-color: white;
   box-shadow: 0 -24px 25px 19px black;
 }
@@ -27,4 +26,7 @@ body {
   margin-top: 30px;
   padding: 20px;
   background-color: #fff;
+}
+.iconfont{
+  font-size: 20px;
 }
